iter_language/tests/corpus/invalid/queue-sqs-bad-credentials-kind.iter
queue sqs {
  queue_url = "https://sqs.us-east-1.amazonaws.com/123/q"
  region    = "us-east-1"
  credentials {
    kind = "telepathy"
  }
}

workspace local {
  base = "."
}

agent claude {
  mode = print
  command = "claude"
}

prompt "do the thing"
runner { continue_on_error = false  behavior = wait }
